# mim

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.cmake.in  header_list.cmake  library.h
.github/workflows/: build.yml  ci.yml
cmake/: GlobalConfig.cmake  Macros.cmake
ext/: CMakeLists.txt
ext/googletest/: CMakeLists.txt
ext/googletest/googletest/: CMakeLists.txt
ext/googletest/googletest/include/gtest/: gtest-printers.h
ext/googletest/googletest/include/gtest/internal/: gtest-port.h
include/: float16.hpp  math.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  vector1.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/mim/: cmath.hpp  half.hpp  mat.hpp  mat2.hpp  mat3.hpp  mat4.hpp  mathUtils.hpp  mim.hpp  mimConstants.hpp  mimMath.hpp  mimMathDefs.hpp  quat.hpp  random.hpp  vec.hpp  vec1.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/mim/detail/: defines.hpp  qualifier.hpp
include/mim/detail/compute/: compute_functors.hpp  compute_matrix.hpp  compute_quaternion.hpp  compute_vector.hpp
include/mim/detail/func/: func_matrix2x4.inl  func_matrix4x4_simd.inl  func_quaternion.inl  func_quaternion_simd.inl  func_vector1.inl  func_vector2.inl  func_vector3.inl  func_vector4.inl  func_vector_simd.inl
include/mim/detail/type/: type_matrix2x2.hpp  type_matrix2x3.hpp  type_matrix2x4.hpp  type_matrix3x2.hpp  type_matrix3x2.inl  type_matrix3x3.hpp  type_matrix3x4.hpp  type_matrix3x4.inl  type_matrix4x2.hpp  type_matrix4x3.hpp  type_matrix4x4.hpp  type_quaternion.hpp  type_quaternion.inl  type_vector1.hpp  type_vector1.inl  type_vector2.hpp  type_vector2.inl  type_vector3.hpp  type_vector3.inl  type_vector4.hpp  type_vector4.inl  type_vector4_simd.inl
include/mim/internal/: float16compressor.hpp  functionpacker.hpp  setup.hpp
include/mim/internal/config/: architecture.hpp  compiler.hpp  compiler_features.hpp  compiler_traits.hpp  platform.hpp
include/mim/internal/misc/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
include/mim/simd/: simdNeon.hpp  simdSetup.hpp  simdUtil.hpp
mim/: CMakeLists.txt
mim/include/: float16.hpp  math.hpp  matrix.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  matrixT.hpp  mim.hpp  quaternion.hpp  vec.hpp  vector1.hpp  vector2.hpp  vector2f.hpp  vector3.hpp  vector3f.hpp  vector4.hpp  vector4f.hpp  vectorT.hpp
mim/include/internal/: build_version.hpp.in  float16compressor.hpp  setup.hpp  version.hpp
mim/include/mim/: float16.hpp  math.hpp  matrix2f.hpp  matrix3f.hpp  matrix4f.hpp  quaternion.hpp  vec.hpp  vector2f.hpp  vector3f.hpp  vector4f.hpp  vectorT.hpp
mim/include/mim/internal/: float16compressor.hpp
mim/include/mim/simd/: platform.hpp  simdQuad.hpp  simdScalar.hpp
mim/src/: vector2f.cpp  vector3f.cpp  vector4f.cpp  vectorT.cpp
src/: MathF.h  Vec.hpp  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp  _dummy.cpp  random.cpp  version.hpp.in
src/public/: Vec.h  Vector3.h  VectorT.h
test/: CMakeLists.txt  mim.cppcheck
test/common/: cmath_tests.cpp  mimMath_tests.cpp  random_tests.cpp
test/half/: half_tests.cpp
test/mat/: mat2x2_tests.cpp  mat3x4_tests.cpp  mat4x2_func_tests.cpp
test/quat/: quat_func_tests.cpp  quat_tests.cpp
test/vec/: vector1_func_tests.cpp  vector1_tests.cpp  vector2_tests.cpp  vector3_func_tests.cpp  vector3_tests.cpp  vector4_tests.cpp
